added node version

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "contact-keeper",
   "version": "1.0.0",
   "description": "Contact manager app",
+  "engines": {
+    "node": "10.16.0"
+  },
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
